--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -5,115 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
-
-        * {
-            padding: 0;
-            margin: 0;
-        }
-
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        header {
-            background-color: black;
-            text-align: center;
-            padding: 40px 0;
-            color: white;
-        }
-
-        header h1 {
-            font-family: 'Passion One', cursive;
-            padding-bottom: 10px;
-            font-size: 125px;
-        }
-
-        header a {
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-        }
-
-        header a:hover {
-            text-decoration: underline;
-        }
-
-        main {
-            background-color: white;
-        }
-
-        section {
-            padding: 98px 0 98px 30px;
-        }
-
-        main p {
-            font-family: 'Sriracha', cursive;
-            font-size: 43px;
-            padding-bottom: 20px;
-        }
-
-        .bgflower {
-            background-image: url('imagens/background001.jpg');
-            background-size: cover;
-            background-attachment: fixed;
-        }
-
-        .bgflower p {
-            display: inline-block;
-            color: white;
-            text-shadow: 1px 1px 0 black;
-
-            padding: 5px;
-            background-color: rgba(0, 0, 0, 0.212);
-        }
-
-        .bgbook {
-            background-image: url('imagens/background002.jpg');
-            background-size: cover;
-            background-attachment: fixed;
-            box-shadow: 6px 1px 1px 0px ; 
-            /* pAREI A QUI */
-        }
-
-        .bgbook p {
-            display: inline-block;
-            color: white;
-            text-shadow: 1px 1px 0 black;
-
-            padding: 5px;
-            background-color: rgba(0, 0, 0, 0.486);
-        }
-
-        footer {
-            background-color: black;            
-        }
-
-        footer p {
-            color: white;
-            text-align: center;
-            padding: 8px;
-            font-size: 1.1rem;
-        }
-
-        footer a {
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Cordel Moderno</h1>
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
+    
     <main>
         <section class="bgwhite">
             <p>
@@ -126,7 +25,7 @@
                 Vou dizer tudo em poesia.
             </p>
         </section>
-        <section class="bgflower">
+        <section class="bgwall flower">
             <p>
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -159,7 +58,7 @@
             </p>
 
         </section>
-        <section class="bgbook">
+        <section class="bgwall book">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
