--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -33,7 +33,7 @@
                 O "O" e o "E" foi riscado <br>
                 Para declarar o amor <br>
                 Basta botar uma flor <br>
-                E um coração desenhado. <br>
+                E um coração desenhado. 
             </p>
 
         </section>
@@ -78,7 +78,7 @@
                 A pessoa foi embora <br>
                 Abriu outro aplicativo <br>
                 O mundo ficou cativo <br>
-                Da tecnologia do agora. <br>
+                Da tecnologia do agora. 
             </p>
             <p>
                 Felizmente, pra orar <br>
