--- a/exercicios/ex023/table.html
+++ b/exercicios/ex023/table.html
@@ -5,6 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira Tabela</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            height: 98vh;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        table {
+            border: 2px solid darkblue;
+            width: 400px;
+            height: 400px;
+            text-align: center;
+            border-collapse: collapse;
+
+            position: relative;
+            left: 50%;
+            top: 50%;
+
+            transform: translate(-50%, -50%);
+
+        }
+
+        td {
+            padding: 5px;
+            background-color: lightblue;
+            border: 1px solid gray;
+            vertical-align: middle;
+
+        }
+    </style>
 </head>
 <body>
     <h1>Tabelas</h1>
@@ -18,6 +51,16 @@
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
+        </tr>
+        <tr>
+            <td>A3</td>
+            <td>B3</td>
+            <td>C3</td>
+        </tr>
+        <tr>
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
         </tr>
     </table>
 </body>
