--- a/exercicios/ex023/table002.html
+++ b/exercicios/ex023/table002.html
@@ -29,15 +29,27 @@
         .populationNumber {
             text-align: right;
         }
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
+        .population {
+            width: 100px;
+        }
     </style>
 </head>
 <body>
     <h1>Tabelas Grandes</h1>
     <table>
+        <caption>População das Unidades Federativas do Brasil</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col" class="state">Estado</th>
+                <th scope="col" class="population">População</th>
             </tr>
         </thead>
         <tbody>
@@ -152,7 +164,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="populationNumber"><strong>200.000.000</strong></td>
             </tr>
         </tfoot>
