--- a/exercicios/ex023/table002.html
+++ b/exercicios/ex023/table002.html
@@ -26,6 +26,14 @@
             color: white;
         }
 
+        tbody > tr:nth-child(even) {
+            background-color: yellow;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color: green;
+        }
+
         .populationNumber {
             text-align: right;
         }
