--- a/exercicios/ex023/table002.html
+++ b/exercicios/ex023/table002.html
@@ -11,7 +11,6 @@
         }
 
         table {
-            /* border: 2px solid black; */
             border-collapse: collapse;
             width: 400px;
         }
@@ -24,6 +23,12 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         tbody > tr:nth-child(even) {
